--- a/index.html
+++ b/index.html
@@ -1,1 +1,30 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <title>Philippe Tłokiński — Actor & Magician</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="/assets/style.css" />
+</head>
+<body class="home">
 
+  <main class="split">
+    <section class="panel actor-panel">
+      <div class="content">
+        <h1>Philippe Tłokiński</h1>
+        <p class="subtitle">Actor</p>
+        <a href="/actor/" class="btn btn-dark">Enter</a>
+      </div>
+    </section>
+
+    <section class="panel magician-panel">
+      <div class="content">
+        <h1>Philippe Tłokiński</h1>
+        <p class="subtitle">Magician</p>
+        <a href="/magician/" class="btn btn-light">Enter</a>
+      </div>
+    </section>
+  </main>
+
+</body>
+</html>
