--- a/magician/index.html
+++ b/magician/index.html
@@ -28,7 +28,7 @@
   <section class="section">
     <h2>Performance</h2>
     <p>
-      Philippe performs modern, story-driven magic for private events,
+      Philippe performs magic for kids, private events,
       corporate audiences and theatrical stages. Each show is tailored
       to the atmosphere, audience and setting.
     </p>
@@ -41,7 +41,7 @@
     </p>
     <p>
       <strong>Email:</strong>
-      <a href="mailto:magic@philippetlokinski.com">magic@philippetlokinski.com</a>
+      <a href="mailto:contact@philippetlokinski.com">magic@philippetlokinski.com</a>
     </p>
   </section>
 
