--- a/magician/index.html
+++ b/magician/index.html
@@ -41,7 +41,7 @@
     </p>
     <p>
       <strong>Email:</strong>
-      <a href="mailto:contact@philippetlokinski.com">magic@philippetlokinski.com</a>
+      <a href="mailto:contact@philippetlokinski.com">contact@philippetlokinski.com</a>
     </p>
   </section>
 
