--- a/actor/index.html
+++ b/actor/index.html
@@ -16,7 +16,7 @@
     </nav>
   </header>
 
-  <section class="hero">
+  <section class="hero actor-hero">
     <div class="hero-text">
       <h1>Actor</h1>
       <p>
