--- a/actor/index.html
+++ b/actor/index.html
@@ -38,10 +38,10 @@
   <section class="section">
     <h2>Representation</h2>
     <ul class="list">
-      <li>🇬🇧 London — Agency Name</li>
+      <li>🇬🇧 UK — StevensonWithers.com</li>
       <li>🇺🇸 USA — Agency Name</li>
-      <li>🇵🇱 Poland — Agency Name</li>
-      <li>🇫🇷 France — Agency Name</li>
+      <li>🇵🇱 Poland — St-Gama.pl</li>
+      <li>🇫🇷 France — AgenceMartineLapertot.com</li>
     </ul>
   </section>
 
