--- a/actor/index.html
+++ b/actor/index.html
@@ -20,8 +20,10 @@
     <div class="hero-text">
       <h1>Actor</h1>
       <p>
-        Film, television and theatre performer working internationally
-        across Europe and the United States.
+        Of Polish descent, Philippe was born in France and grew up in Switzerland.
+        After graduating from the National School of Dramatic Art of Saint-Étienne (France), he worked over the years on various projects with well-respected stage directors such as Ludovic Lagarde, Séverine Chavrier, Yves-Noël Genod, Hervé Loichemol, Joan Mompart and Ivan Vyrypaev.
+        He has appeared in various television series, but is best known for his performances in films such as Noc Walpurgi (Walpurgi’s Night) by Marcin Bortkiewicz, Kurier (The Resistance Fighter, also released as The Messenger) by Władysław Pasikowski, and Adventures of a Mathematician by Thorsten Klein.
+        A polyglot (French, Polish, English and Italian), he explores with great interest the impact language has on acting. Passionate about music and dance, he regularly practices singing, piano and tap dancing. He is also a magician.
       </p>
     </div>
   </section>
