--- a/magician/index.html
+++ b/magician/index.html
@@ -20,7 +20,11 @@
     <div class="hero-text">
       <h1>Magician</h1>
       <p>
-        Contemporary magic for theatre, private events and international audiences.
+        Philippe na co dzień jest aktorem. Być może widzieli go Państwo w filmach, serialach lub na deskach teatru. Tak się składa, że jest także iluzjonistą!
+        Wysepuje zarówno dla dzieci i rodzin, jak i na wydarzenia biznesowe, kulturalne oraz eventy specjalne.
+        40-minutowy pokaz iluzji przeznaczony dla widzów w różnym wieku — zarówno dla dzieci, jak i dorosłych.
+        To familijna forma magii, oparta na wspólnym przeżywaniu i bezpośrednim kontakcie z publicznością.
+        Dla najmłodszych magia staje się wspólną przygodą i pierwszym doświadczeniem teatru. Dla dorosłych — chwilą zatrzymania, zaskoczenia i wytrącenia z codziennych schematów.
       </p>
     </div>
   </section>
@@ -28,7 +32,9 @@
   <section class="section">
     <h2>Performance</h2>
     <p>
-      Philippe performs magic for kids, private events,
+      Zamawiajac tak zwany "Red Jacket Show" Philippe zalozy swoja czerwona marynarke i niczym superbohater zadba o dobra zabawe na urodzinach, komuniach i festynach.
+      Najczesciej jest to 40-minutowy pokaz iluzji przeznaczony dla widzów w różnym wieku — zarówno dla dzieci, jak i dorosłych.
+      To familijna forma magii!
       corporate audiences and theatrical stages. Each show is tailored
       to the atmosphere, audience and setting.
     </p>
