--- a/magician/index.html
+++ b/magician/index.html
@@ -22,8 +22,6 @@
       <p>
         Philippe na co dzień jest aktorem. Być może widzieli go Państwo w filmach, serialach lub na deskach teatru. Tak się składa, że jest także iluzjonistą!
         Wysepuje zarówno dla dzieci i rodzin, jak i na wydarzenia biznesowe, kulturalne oraz eventy specjalne.
-        40-minutowy pokaz iluzji przeznaczony dla widzów w różnym wieku — zarówno dla dzieci, jak i dorosłych.
-        To familijna forma magii, oparta na wspólnym przeżywaniu i bezpośrednim kontakcie z publicznością.
         Dla najmłodszych magia staje się wspólną przygodą i pierwszym doświadczeniem teatru. Dla dorosłych — chwilą zatrzymania, zaskoczenia i wytrącenia z codziennych schematów.
       </p>
     </div>
@@ -35,8 +33,7 @@
       Zamawiajac tak zwany "Red Jacket Show" Philippe zalozy swoja czerwona marynarke i niczym superbohater zadba o dobra zabawe na urodzinach, komuniach i festynach.
       Najczesciej jest to 40-minutowy pokaz iluzji przeznaczony dla widzów w różnym wieku — zarówno dla dzieci, jak i dorosłych.
       To familijna forma magii!
-      corporate audiences and theatrical stages. Each show is tailored
-      to the atmosphere, audience and setting.
+      Mozna takze go zatrudnic na wydarzenia biznesowe, kulturalne, wesela. Kazde wystep jest szyty na miare.
     </p>
   </section>
 
