--- a/magician/index.html
+++ b/magician/index.html
@@ -33,7 +33,7 @@
       Zamawiajac tak zwany "Red Jacket Show" Philippe zalozy swoja czerwona marynarke i niczym superbohater zadba o dobra zabawe na urodzinach, komuniach i festynach.
       Najczesciej jest to 40-minutowy pokaz iluzji przeznaczony dla widzów w różnym wieku — zarówno dla dzieci, jak i dorosłych.
       To familijna forma magii!
-      Mozna takze go zatrudnic na wydarzenia biznesowe, kulturalne, wesela. Kazde wystep jest szyty na miare.
+      Mozna takze go zatrudnic na wydarzenia biznesowe, kulturalne, wesela. Kazdy wystep jest szyty na miare.
     </p>
   </section>
 
