--- a/index.html
+++ b/index.html
@@ -28,3 +28,11 @@
 
 </body>
 </html>
+<div class="site-overlay">
+  <div class="site-overlay__content">
+    <div class="warning-icon">⚠️</div>
+    <h1>Strona w trakcie budowy</h1>
+    <p>To jest wersja robocza strony.<br>
+    Aktualnie pracuję nad treścią i strukturą.</p>
+  </div>
+</div>
