--- a/index.html
+++ b/index.html
@@ -28,11 +28,10 @@
 
 </body>
 </html>
-<div class="site-overlay">
-  <div class="site-overlay__content">
-    <div class="warning-icon">⚠️</div>
-    <h1>Strona w trakcie budowy</h1>
-    <p>To jest wersja robocza strony.<br>
-    Aktualnie pracuję nad treścią i strukturą.</p>
-  </div>
+
+<div class="site-note">
+  <span class="site-note__icon">⚠️</span>
+  <span class="site-note__text">
+    Strona w trakcie budowy — aktualnie pracuję nad treścią i strukturą.
+  </span>
 </div>
