--- a/magician/index.html
+++ b/magician/index.html
@@ -22,7 +22,8 @@
       <p>
         Philippe na co dzień jest aktorem. Być może widzieli go Państwo w filmach, serialach lub na deskach teatru. Tak się składa, że jest także iluzjonistą!
         Wysepuje zarówno dla dzieci i rodzin, jak i na wydarzenia biznesowe, kulturalne oraz eventy specjalne.
-        Dla najmłodszych magia staje się wspólną przygodą i pierwszym doświadczeniem teatru. Dla dorosłych — chwilą zatrzymania, zaskoczenia i wytrącenia z codziennych schematów.
+        Dla najmłodszych magia staje się wspólną przygodą i pierwszym doświadczeniem teatru.
+        Dla dorosłych — chwilą zatrzymania, zaskoczenia i wytrącenia z codziennych schematów.
       </p>
     </div>
   </section>
