--- a/magician/index.html
+++ b/magician/index.html
@@ -16,7 +16,7 @@
     </nav>
   </header>
 
-  <section class="hero light-hero">
+  <section class="hero magician-hero">
     <div class="hero-text">
       <h1>Magician</h1>
       <p>
