--- a/actor/index.html
+++ b/actor/index.html
@@ -11,8 +11,9 @@
   <header class="topbar">
     <a href="/" class="logo">Philippe Tłokiński</a>
     <nav>
-      <a href="/magician/">Magician</a>
+      <a href="#media">Media</a>
       <a href="#contact">Contact</a>
+      <a href="/magician/">Magician</a>
     </nav>
   </header>
 
@@ -36,6 +37,11 @@
       Poland, France, the United Kingdom and the United States.
     </p>
   </section>
+  
+  <section class="section" id="media">
+  <h2>Media</h2>
+  <p>Headshots, stills and showreel available soon.</p>
+</section>
 
   <section class="section">
     <h2>Representation</h2>
