--- a/actor/index.html
+++ b/actor/index.html
@@ -40,7 +40,22 @@
   
   <section class="section" id="media">
   <h2>Media</h2>
-  <p>Headshots, stills and showreel available soon.</p>
+  
+  <h3>Headshots</h3>
+  <div class="grid">
+    <img src="/assets/headshot1.jpg" alt="Philippe Tłokiński Headshot 1" />
+    <img src="/assets/headshot2.jpg" alt="Philippe Tłokiński Headshot 2" />
+  </div>
+  
+  <h3>Portfolio</h3>
+  <div class="grid">
+    <img src="/assets/portfolio1.jpg" alt="Philippe Tłokiński Portfolio 1" />
+    <img src="/assets/portfolio2.jpg" alt="Philippe Tłokiński Portfolio 2" />
+    <img src="/assets/portfolio3.jpg" alt="Philippe Tłokiński Portfolio 3" />
+  </div>
+  
+  <h3>Showreel</h3>
+  <iframe src="https://www.youtube.com/embed/..."></iframe>
 </section>
 
   <section class="section">
