--- a/actor/index.html
+++ b/actor/index.html
@@ -40,22 +40,40 @@
   
   <section class="section" id="media">
   <h2>Media</h2>
-  
-  <h3>Headshots</h3>
-  <div class="grid">
-    <img src="/assets/headshot1.jpg" alt="Philippe Tłokiński Headshot 1" />
-    <img src="/assets/headshot2.jpg" alt="Philippe Tłokiński Headshot 2" />
+
+  <!-- HEADSHOTS -->
+  <div class="media-group">
+    <h3>Headshots</h3>
+    <div class="grid">
+      <img src="/assets/headshot1.jpg" alt="Philippe Tłokiński Headshot 1" />
+      <img src="/assets/headshot2.jpg" alt="Philippe Tłokiński Headshot 2" />
+      <img src="/assets/headshot3.jpg" alt="Philippe Tłokiński Headshot 3" />
+    </div>
   </div>
-  
-  <h3>Portfolio</h3>
-  <div class="grid">
-    <img src="/assets/portfolio1.jpg" alt="Philippe Tłokiński Portfolio 1" />
-    <img src="/assets/portfolio2.jpg" alt="Philippe Tłokiński Portfolio 2" />
-    <img src="/assets/portfolio3.jpg" alt="Philippe Tłokiński Portfolio 3" />
+
+  <!-- PORTFOLIO -->
+  <div class="media-group">
+    <h3>Portfolio</h3>
+    <div class="grid">
+      <img src="/assets/portfolio1.jpg" alt="Philippe Tłokiński Portfolio 1" />
+      <img src="/assets/portfolio2.jpg" alt="Philippe Tłokiński Portfolio 2" />
+      <img src="/assets/portfolio3.jpg" alt="Philippe Tłokiński Portfolio 3" />
+      <img src="/assets/portfolio4.jpg" alt="Philippe Tłokiński Portfolio 4" />
+    </div>
   </div>
-  
-  <h3>Showreel</h3>
-  <iframe src="https://www.youtube.com/embed/..."></iframe>
+
+  <!-- SHOWREEL -->
+  <div class="media-group">
+    <h3>Showreel</h3>
+    <div class="video-wrapper">
+      <iframe src="https://www.youtube.com/embed/TWÓJ_KOD" 
+              title="Philippe Tłokiński Showreel" 
+              frameborder="0" 
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+              allowfullscreen>
+      </iframe>
+    </div>
+  </div>
 </section>
 
   <section class="section">
