--- a/actor/index.html
+++ b/actor/index.html
@@ -66,7 +66,7 @@
   <div class="media-group">
     <h3>Showreel</h3>
     <div class="video-wrapper">
-      <iframe src="https://www.youtube.com/watch?v=XVaE7ndLrhM" 
+      <iframe src="https://www.youtube.com/embed/TWÓJ_KOD" 
               title="Philippe Tłokiński Showreel" 
               frameborder="0" 
               allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
