--- a/magician/index.html
+++ b/magician/index.html
@@ -11,7 +11,7 @@
   <header class="topbar light">
     <a href="/" class="logo">Philippe Tłokiński</a>
     <nav>
-      <a href="#contact">Book</a>
+      <a href="#contact">Contact</a>
       <a href="/actor/">Actor</a>
     </nav>
   </header>
