--- a/magician/index.html
+++ b/magician/index.html
@@ -39,7 +39,7 @@
   </section>
 
   <section class="section">
-    <h2>Booking</h2>
+    <h2>Contact</h2>
     <p>
       For bookings and collaborations, contact directly:
     </p>
