--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="/assets/style.css" />
 </head>
-<body class="actor-page">
+<body class="home">
 
   <main class="split">
     <section class="panel actor-panel">
