--- a/magician/index.html
+++ b/magician/index.html
@@ -6,48 +6,60 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="/assets/style.css" />
 </head>
-<body class="magician-page">
 
-  <header class="topbar light">
-    <a href="/" class="logo">Philippe Tłokiński</a>
-    <nav>
-      <a href="#contact">Contact</a>
-      <a href="/actor/">Actor</a>
-    </nav>
-  </header>
+<body>
 
-  <section class="hero light-hero">
-    <div class="hero-text">
-      <h1>Magician</h1>
+  <div class="page page--magician">
+
+    <header class="topbar">
+      <a href="/" class="logo">Philippe Tłokiński</a>
+      <nav>
+        <a href="#contact">Contact</a>
+        <a href="/actor/">Actor</a>
+      </nav>
+    </header>
+
+    <section class="hero light-hero">
+      <div class="hero-text">
+        <h1>Magician</h1>
+        <p>
+          Philippe na co dzień jest aktorem. Być może widzieli go Państwo w filmach,
+          serialach lub na deskach teatru. Tak się składa, że jest także iluzjonistą!
+          Występuje zarówno dla dzieci i rodzin, jak i na wydarzenia biznesowe,
+          kulturalne oraz eventy specjalne.
+          Dla najmłodszych magia staje się wspólną przygodą i pierwszym doświadczeniem teatru.
+          Dla dorosłych — chwilą zatrzymania, zaskoczenia i wytrącenia z codziennych schematów.
+        </p>
+      </div>
+    </section>
+
+    <section class="section">
+      <h2>Performance</h2>
       <p>
-        Philippe na co dzień jest aktorem. Być może widzieli go Państwo w filmach, serialach lub na deskach teatru. Tak się składa, że jest także iluzjonistą!
-        Wysepuje zarówno dla dzieci i rodzin, jak i na wydarzenia biznesowe, kulturalne oraz eventy specjalne.
-        Dla najmłodszych magia staje się wspólną przygodą i pierwszym doświadczeniem teatru.
-        Dla dorosłych — chwilą zatrzymania, zaskoczenia i wytrącenia z codziennych schematów.
+        Zamawiając tak zwany „Red Jacket Show” Philippe zakłada swoją czerwoną marynarkę
+        i niczym superbohater dba o dobrą zabawę na urodzinach, komuniach i festynach.
+        Najczęściej jest to 40-minutowy pokaz iluzji przeznaczony dla widzów w różnym wieku —
+        zarówno dla dzieci, jak i dorosłych.
+        To familijna forma magii!
+        Można także go zatrudnić na wydarzenia biznesowe, kulturalne oraz wesela.
+        Każdy występ jest szyty na miarę.
       </p>
-    </div>
-  </section>
+    </section>
 
-  <section class="section">
-    <h2>Performance</h2>
-    <p>
-      Zamawiajac tak zwany "Red Jacket Show" Philippe zalozy swoja czerwona marynarke i niczym superbohater zadba o dobra zabawe na urodzinach, komuniach i festynach.
-      Najczesciej jest to 40-minutowy pokaz iluzji przeznaczony dla widzów w różnym wieku — zarówno dla dzieci, jak i dorosłych.
-      To familijna forma magii!
-      Mozna takze go zatrudnic na wydarzenia biznesowe, kulturalne, wesela. Kazdy wystep jest szyty na miare.
-    </p>
-  </section>
+    <section class="section" id="contact">
+      <h2>Contact</h2>
+      <p>
+        For bookings and collaborations, contact directly:
+      </p>
+      <p>
+        <strong>Email:</strong>
+        <a href="mailto:contact@philippetlokinski.com">
+          contact@philippetlokinski.com
+        </a>
+      </p>
+    </section>
 
-  <section class="section">
-    <h2>Contact</h2>
-    <p>
-      For bookings and collaborations, contact directly:
-    </p>
-    <p>
-      <strong>Email:</strong>
-      <a href="mailto:contact@philippetlokinski.com">contact@philippetlokinski.com</a>
-    </p>
-  </section>
+  </div>
 
 </body>
 </html>
