--- a/actor/index.html
+++ b/actor/index.html
@@ -6,96 +6,63 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="/assets/style.css" />
 </head>
-
 <body>
 
-  <div class="page page--actor">
+<div class="page page--actor">
 
-    <header class="topbar">
-      <a href="/" class="logo">Philippe Tłokiński</a>
-      <nav>
-        <a href="#media">Media</a>
-        <a href="#contact">Contact</a>
-        <a href="/magician/">Magician</a>
-      </nav>
-    </header>
+  <header class="topbar">
+    <a href="/" class="logo">Philippe Tłokiński</a>
+    <nav>
+      <a href="#media">Media</a>
+      <a href="#contact">Contact</a>
+      <a href="/magician/">Magician</a>
+    </nav>
+  </header>
 
-    <section class="hero actor-hero">
-      <div class="hero-text">
-        <h1>Actor</h1>
-        <p>
-          Of Polish descent, Philippe was born in France and grew up in Switzerland.
-          After graduating from the National School of Dramatic Art of Saint-Étienne (France), he worked over the years on various projects with well-respected stage directors such as Ludovic Lagarde, Séverine Chavrier, Yves-Noël Genod, Hervé Loichemol, Joan Mompart and Ivan Vyrypaev.
-          He has appeared in various television series, but is best known for his performances in films such as Noc Walpurgi (Walpurgi’s Night) by Marcin Bortkiewicz, Kurier (The Resistance Fighter, also released as The Messenger) by Władysław Pasikowski, and Adventures of a Mathematician by Thorsten Klein.
-          A polyglot (French, Polish, English and Italian), he explores with great interest the impact language has on acting. Passionate about music and dance, he regularly practices singing, piano and tap dancing. He is also a magician.
-        </p>
-      </div>
-    </section>
-
-    <section class="section">
-      <h2>Biography</h2>
+  <section class="hero actor-hero">
+    <div class="hero-text">
+      <h1>Actor</h1>
       <p>
-        Philippe Tłokiński is an actor working in film, television and theatre.
-        His work spans international productions, with representation in
-        Poland, France, the United Kingdom and the United States.
+        Of Polish descent, Philippe was born in France and grew up in Switzerland.
+        After graduating from the National School of Dramatic Art of Saint-Étienne (France),
+        he worked with Ludovic Lagarde, Séverine Chavrier, Yves-Noël Genod,
+        Hervé Loichemol, Joan Mompart and Ivan Vyrypaev.
       </p>
-    </section>
+    </div>
+  </section>
 
-    <section class="section" id="media">
-      <h2>Media</h2>
+  <section class="section">
+    <h2>Biography</h2>
+    <p>
+      Philippe Tłokiński is an actor working in film, television and theatre.
+      His work spans international productions.
+    </p>
+  </section>
 
-      <!-- HEADSHOTS -->
-      <div class="media-group">
-        <h3>Headshots</h3>
-        <div class="grid">
-          <img src="/assets/headshot1.jpg" alt="Philippe Tłokiński Headshot 1" />
-          <img src="/assets/headshot2.jpg" alt="Philippe Tłokiński Headshot 2" />
-          <img src="/assets/headshot3.jpg" alt="Philippe Tłokiński Headshot 3" />
-        </div>
+  <section class="section" id="media">
+    <h2>Media</h2>
+
+    <div class="media-group">
+      <h3>Headshots</h3>
+      <div class="grid">
+        <img src="/assets/headshot1.jpg" alt="">
+        <img src="/assets/headshot2.jpg" alt="">
+        <img src="/assets/headshot3.jpg" alt="">
       </div>
+    </div>
+  </section>
 
-      <!-- PORTFOLIO -->
-      <div class="media-group">
-        <h3>Portfolio</h3>
-        <div class="grid">
-          <img src="/assets/portfolio1.jpg" alt="Philippe Tłokiński Portfolio 1" />
-          <img src="/assets/portfolio2.jpg" alt="Philippe Tłokiński Portfolio 2" />
-          <img src="/assets/portfolio3.jpg" alt="Philippe Tłokiński Portfolio 3" />
-          <img src="/assets/portfolio4.jpg" alt="Philippe Tłokiński Portfolio 4" />
-        </div>
-      </div>
+  <section class="section" id="contact">
+    <h2>Contact</h2>
+    <p>
+      Email:
+      <a href="mailto:contact@philippetlokinski.com">
+        contact@philippetlokinski.com
+      </a>
+    </p>
+  </section>
 
-      <!-- SHOWREEL -->
-      <div class="media-group">
-        <h3>Showreel</h3>
-        <div class="video-wrapper">
-          <iframe
-            src="https://www.youtube.com/embed/TWÓJ_KOD"
-            title="Philippe Tłokiński Showreel"
-            frameborder="0"
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-            allowfullscreen>
-          </iframe>
-        </div>
-      </div>
-    </section>
-
-    <section class="section">
-      <h2>Representation</h2>
-      <ul class="list">
-        <li>🇬🇧 UK — StevensonWithers.com</li>
-        <li>🇺🇸 USA — Agency Name</li>
-        <li>🇵🇱 Poland — St-Gama.pl</li>
-        <li>🇫🇷 France — AgenceMartineLapertot.com</li>
-      </ul>
-    </section>
-
-    <section class="section" id="contact">
-      <h2>Contact</h2>
-      <p>Email: <a href="mailto:contact@philippetlokinski.com">contact@philippetlokinski.com</a></p>
-    </section>
-
-  </div>
+</div>
 
 </body>
 </html>
