--- a/magician/index.html
+++ b/magician/index.html
@@ -6,60 +6,58 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="/assets/style.css" />
 </head>
-
 <body>
 
-  <div class="page page--magician">
+<div class="page page--magician">
 
-    <header class="topbar">
-      <a href="/" class="logo">Philippe Tłokiński</a>
-      <nav>
-        <a href="#contact">Contact</a>
-        <a href="/actor/">Actor</a>
-      </nav>
-    </header>
+  <header class="topbar light">
+    <a href="/" class="logo">Philippe Tłokiński</a>
+    <nav>
+      <a href="#contact">Contact</a>
+      <a href="/actor/">Actor</a>
+    </nav>
+  </header>
 
-    <section class="hero light-hero">
-      <div class="hero-text">
-        <h1>Magician</h1>
-        <p>
-          Philippe na co dzień jest aktorem. Być może widzieli go Państwo w filmach,
-          serialach lub na deskach teatru. Tak się składa, że jest także iluzjonistą!
-          Występuje zarówno dla dzieci i rodzin, jak i na wydarzenia biznesowe,
-          kulturalne oraz eventy specjalne.
-          Dla najmłodszych magia staje się wspólną przygodą i pierwszym doświadczeniem teatru.
-          Dla dorosłych — chwilą zatrzymania, zaskoczenia i wytrącenia z codziennych schematów.
-        </p>
-      </div>
-    </section>
-
-    <section class="section">
-      <h2>Performance</h2>
+  <section class="hero light-hero">
+    <div class="hero-text">
+      <h1>Magician</h1>
       <p>
-        Zamawiając tak zwany „Red Jacket Show” Philippe zakłada swoją czerwoną marynarkę
-        i niczym superbohater dba o dobrą zabawę na urodzinach, komuniach i festynach.
-        Najczęściej jest to 40-minutowy pokaz iluzji przeznaczony dla widzów w różnym wieku —
-        zarówno dla dzieci, jak i dorosłych.
-        To familijna forma magii!
-        Można także go zatrudnić na wydarzenia biznesowe, kulturalne oraz wesela.
-        Każdy występ jest szyty na miarę.
+        Philippe na co dzień jest aktorem. Być może widzieli go Państwo w filmach,
+        serialach lub na deskach teatru. Tak się składa, że jest także iluzjonistą.
+        <br><br>
+        Występuje dla dzieci i rodzin, jak również na wydarzenia biznesowe,
+        kulturalne oraz eventy specjalne.
       </p>
-    </section>
+    </div>
+  </section>
 
-    <section class="section" id="contact">
-      <h2>Contact</h2>
-      <p>
-        For bookings and collaborations, contact directly:
-      </p>
-      <p>
-        <strong>Email:</strong>
-        <a href="mailto:contact@philippetlokinski.com">
-          contact@philippetlokinski.com
-        </a>
-      </p>
-    </section>
+  <section class="section">
+    <h2>Performance</h2>
+    <p>
+      Zamawiając „Red Jacket Show”, Philippe zakłada swoją czerwoną marynarkę
+      i niczym superbohater dba o dobrą zabawę podczas urodzin, komunii
+      oraz wydarzeń rodzinnych.
+      <br><br>
+      Najczęściej jest to 40-minutowy pokaz iluzji przeznaczony dla widzów
+      w różnym wieku — zarówno dla dzieci, jak i dorosłych.
+      Każdy występ jest szyty na miarę.
+    </p>
+  </section>
 
-  </div>
+  <section class="section" id="contact">
+    <h2>Contact</h2>
+    <p>
+      For bookings and collaborations:
+    </p>
+    <p>
+      <strong>Email:</strong>
+      <a href="mailto:contact@philippetlokinski.com">
+        contact@philippetlokinski.com
+      </a>
+    </p>
+  </section>
+
+</div>
 
 </body>
 </html>
