Revise actor section with new details for Philippe Tłokiński
Updated the actor section with Philippe Tłokiński's name and role, and revised the biography for clarity.

--- a/actor/index.html
+++ b/actor/index.html
@@ -20,22 +20,24 @@
   </header>
 
   <section class="hero actor-hero">
-    <div class="hero-text">
-      <h1>Actor</h1>
-      <p>
-        Of Polish descent, Philippe was born in France and grew up in Switzerland.
-        After graduating from the National School of Dramatic Art of Saint-Étienne (France),
-        he worked with Ludovic Lagarde, Séverine Chavrier, Yves-Noël Genod,
-        Hervé Loichemol, Joan Mompart and Ivan Vyrypaev.
-      </p>
+  <div class="hero-text">
+    <h1>Philippe Tłokiński</h1>
+    <p class="role">Actor · Magician</p>
+    <div class="hero-buttons">
+      <a href="/actor/" class="btn btn-dark">Actor</a>
+      <a href="/magician/" class="btn btn-light">Magician</a>
     </div>
-  </section>
+  </div>
+</section>
 
   <section class="section">
     <h2>Biography</h2>
     <p>
       Philippe Tłokiński is an actor working in film, television and theatre.
-      His work spans international productions.
+      His work spans international productions. Of Polish descent, Philippe was born in France and grew up in Switzerland.
+        After graduating from the National School of Dramatic Art of Saint-Étienne (France),
+        he worked with Ludovic Lagarde, Séverine Chavrier, Yves-Noël Genod,
+        Hervé Loichemol, Joan Mompart and Ivan Vyrypaev.
     </p>
   </section>
 
