--- a/actor/index.html
+++ b/actor/index.html
@@ -54,6 +54,16 @@
     </div>
   </section>
 
+<section class="section representation">
+  <h2>Representation</h2>
+  <ul class="list">
+    <li><strong>🇵🇱 Poland</strong> — St-Gama</li>
+    <li><strong>🇬🇧 UK</strong> — Stevenson Withers</li>
+    <li><strong>🇺🇸 USA</strong> — Agency Name</li>
+    <li><strong>🇫🇷 France</strong> — Agence Martine Lapertot</li>
+  </ul>
+</section>
+  
   <section class="section" id="contact">
     <h2>Contact</h2>
     <p>
