--- a/actor/index.html
+++ b/actor/index.html
@@ -13,9 +13,13 @@
   <header class="topbar">
     <a href="/" class="logo">Philippe Tłokiński</a>
     <nav>
-      <a href="#media">Media</a>
+      <a href="#biography">Biography</a>
+      <a href="#showreel">Showreel</a>
+      <a href="#media">Gallery</a>
+      <a href="#news">News</a>
+      <a href="#representation">Representation</a>
       <a href="#contact">Contact</a>
-      <a href="/magician/">Magician</a>
+      <a href="/magician/" class="switch">Magician</a>
     </nav>
   </header>
 
