Refactor media section to include gallery

--- a/actor/index.html
+++ b/actor/index.html
@@ -45,12 +45,8 @@
     </p>
   </section>
 
-  <section class="section" id="media">
-    <h2>Media</h2>
-
-<section class="section showreel" id="showreel">
+  <section class="section showreel" id="showreel">
   <h2>Showreel</h2>
-
   <div class="video-wrapper">
     <iframe
       src="https://www.youtube.com/embed/TWÓJ_KOD"
@@ -60,16 +56,18 @@
   </div>
 </section>
 
-    
-    <div class="media-group">
-      <h3>Headshots</h3>
-      <div class="grid">
-        <img src="/assets/headshot1.jpg" alt="">
-        <img src="/assets/headshot2.jpg" alt="">
-        <img src="/assets/headshot3.jpg" alt="">
-      </div>
+<section class="section" id="media">
+  <h2>Gallery</h2>
+
+  <div class="media-group">
+    <h3>Headshots</h3>
+    <div class="grid">
+      <img src="/assets/headshot1.jpg" alt="Headshot Philippe Tłokiński">
+      <img src="/assets/headshot2.jpg" alt="Headshot Philippe Tłokiński">
+      <img src="/assets/headshot3.jpg" alt="Headshot Philippe Tłokiński">
     </div>
-  </section>
+  </div>
+</section>
 
 <section class="section representation">
   <h2>Representation</h2>
