--- a/actor/index.html
+++ b/actor/index.html
@@ -68,8 +68,13 @@
     </div>
   </div>
 </section>
-
-<section class="section representation">
+  
+<section class="section" id="news">
+  <h2>News</h2>
+  <p>Currently appearing in theatre and film productions. Updates coming soon.</p>
+</section>
+  
+<section class="section representation" id="representation">
   <h2>Representation</h2>
   <ul class="list">
     <li><strong>🇵🇱 Poland</strong> — St-Gama</li>
