Update biography and news sections in index.html

--- a/actor/index.html
+++ b/actor/index.html
@@ -34,7 +34,7 @@
   </div>
 </section>
 
-  <section class="section">
+  <section class="section" id="biography">
     <h2>Biography</h2>
     <p>
       Philippe Tłokiński is an actor working in film, television and theatre.
@@ -71,7 +71,7 @@
   
 <section class="section" id="news">
   <h2>News</h2>
-  <p>Currently appearing in theatre and film productions. Updates coming soon.</p>
+  <p>Currently appearing in Ferdydurke at Och-Teatr in Warsaw. Updates coming soon.</p>
 </section>
   
 <section class="section representation" id="representation">
