Change 'Biography' to 'Actor' in index.html

--- a/actor/index.html
+++ b/actor/index.html
@@ -13,7 +13,7 @@
   <header class="topbar">
     <a href="/" class="logo">Philippe Tłokiński</a>
     <nav>
-      <a href="#biography">Biography</a>
+      <a href="#biography">Actor</a>
       <a href="#showreel">Showreel</a>
       <a href="#media">Gallery</a>
       <a href="#news">News</a>
@@ -35,7 +35,7 @@
 </section>
 
   <section class="section" id="biography">
-    <h2>Biography</h2>
+    <h2>Actor</h2>
     <p>
       Philippe Tłokiński is an actor working in film, television and theatre.
       His work spans international productions. Of Polish descent, Philippe was born in France and grew up in Switzerland.
