Update video iframe source and attributes

--- a/actor/index.html
+++ b/actor/index.html
@@ -49,11 +49,13 @@
   <h2>Showreel</h2>
   <div class="video-wrapper">
     <iframe
-      src="https://www.youtube.com/embed/TWÓJ_KOD"
-      title="Philippe Tłokiński Showreel"
-      allowfullscreen>
-    </iframe>
-  </div>
+      src="https://www.youtube.com/embed/XVaE7ndLrhM"
+      title="Demo (Showreel) - Philippe Tłokiński"
+      frameborder="0"
+    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+    allowfullscreen>
+  </iframe>
+</div>
 </section>
 
 <section class="section" id="media">
