Add social links and reorganize header in index.html

--- a/actor/index.html
+++ b/actor/index.html
@@ -11,17 +11,28 @@
 <div class="page page--actor">
 
   <header class="topbar">
-    <a href="/" class="logo">Philippe Tłokiński</a>
-    <nav>
-      <a href="#biography">Actor</a>
-      <a href="#showreel">Showreel</a>
-      <a href="#media">Gallery</a>
-      <a href="#news">News</a>
-      <a href="#representation">Representation</a>
-      <a href="#contact">Contact</a>
-      <a href="/magician/" class="switch">Magician</a>
-    </nav>
-  </header>
+
+  <div class="socials">
+    <a href="https://twitter.com/yourlink" target="_blank">TW</a>
+    <a href="https://instagram.com/yourlink" target="_blank">IG</a>
+    <a href="https://facebook.com/yourlink" target="_blank">FB</a>
+    <a href="https://imdb.com/name/yourlink" target="_blank">IMDb</a>
+  </div>
+
+  <a href="/" class="logo">Philippe Tłokiński</a>
+
+  <nav>
+    <a href="#actor">Actor</a>
+    <a href="#biography">About</a>
+    <a href="#showreel">Showreel</a>
+    <a href="#media">Gallery</a>
+    <a href="#news">News</a>
+    <a href="#representation">Representation</a>
+    <a href="#contact">Contact</a>
+    <a href="/magician/" class="switch">Magician</a>
+  </nav>
+
+</header>
 
   <section class="hero actor-hero">
   <div class="hero-text">
