Remove actor name from logo link
Removed the actor's name from the logo link.

--- a/actor/index.html
+++ b/actor/index.html
@@ -19,7 +19,7 @@
     <a href="https://imdb.com/name/yourlink" target="_blank">IMDb</a>
   </div>
 
-  <a href="/" class="logo">Philippe Tłokiński</a>
+  <a href="/" class="logo"></a>
 
   <nav>
     <a href="#actor">Actor</a>
