--- a/magician/index.html
+++ b/magician/index.html
@@ -11,7 +11,7 @@
 <div class="page page--magician">
 
   <header class="topbar light">
-    <a href="/" class="logo">Philippe Tłokiński</a>
+    <a href="/" class="logo"></a>
     <nav>
       <a href="#contact">Contact</a>
       <a href="/actor/">Actor</a>
