Add LinkedIn link to social media section

--- a/actor/index.html
+++ b/actor/index.html
@@ -17,6 +17,7 @@
     <a href="https://instagram.com/yourlink" target="_blank">IG</a>
     <a href="https://facebook.com/yourlink" target="_blank">FB</a>
     <a href="https://imdb.com/name/yourlink" target="_blank">IMDb</a>
+    <a href="https://linkedin.com/in/yourlink" target="_blank">IN</a>
   </div>
 
   <a href="/" class="logo"></a>
