--- a/index.html
+++ b/index.html
@@ -2,51 +2,78 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Philippe Tłokiński — Actor & Magician</title>
+  <title>Philippe Tłokiński — Actor</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="/assets/style.css" />
 </head>
-<body class="home">
+<body class="page page--actor">
 
-  <main class="split">
-    <section class="panel actor-panel">
-      <div class="content">
-        <h1>Philippe Tłokiński</h1>
-        <p class="subtitle">Actor</p>
-        <a href="/actor/" class="btn btn-dark">Enter</a>
-      </div>
-    </section>
+  <header class="topbar">
+    <div class="topbar-left">
+      <a href="https://twitter.com/" target="_blank">Twitter</a>
+      <a href="https://instagram.com/" target="_blank">Instagram</a>
+      <a href="https://facebook.com/" target="_blank">Facebook</a>
+      <a href="https://imdb.com/" target="_blank">IMDb</a>
+      <a href="https://linkedin.com/" target="_blank">LinkedIn</a>
+    </div>
 
-    <section class="panel magician-panel">
-      <div class="content">
-        <h1>Philippe Tłokiński</h1>
-        <p class="subtitle">Magician</p>
-        <a href="/magician/" class="btn btn-light">Enter</a>
-      </div>
-    </section>
-  </main>
+    <nav class="topbar-nav">
+      <a href="#actor">Actor</a>
+      <a href="#showreel">Showreel</a>
+      <a href="#gallery">Gallery</a>
+      <a href="#news">News</a>
+      <a href="#representation">Representation</a>
+      <a href="#contact">Contact</a>
+      <a href="/magician/" class="switch">Magician</a>
+    </nav>
+  </header>
 
-<div class="site-note">
-  <span class="site-note__icon">⚠️</span>
-  <span class="site-note__text">
-    Strona w trakcie budowy — aktualnie pracuję nad treścią i strukturą.
-  </span>
-</div>
-  
-  <script>
-document.querySelectorAll('a[href^="#"]').forEach(anchor => {
-  anchor.addEventListener("click", function (e) {
-    e.preventDefault();
-    const target = document.querySelector(this.getAttribute("href"));
-    if (!target) return;
+  <section class="hero actor-hero" id="actor">
+    <div class="hero-text">
+      <h1>Philippe Tłokiński</h1>
+      <p class="role">Actor</p>
+    </div>
+  </section>
 
-    window.scrollTo({
-      top: target.offsetTop - 80,
-      behavior: "smooth"
-    });
-  });
-});
-</script>
+  <section class="section" id="showreel">
+    <h2>Showreel</h2>
+    <div class="video-wrapper">
+      <iframe
+        src="https://www.youtube.com/embed/YOUR_VIDEO_ID"
+        title="Philippe Tłokiński Showreel"
+        allowfullscreen>
+      </iframe>
+    </div>
+  </section>
+
+  <section class="section" id="gallery">
+    <h2>Gallery</h2>
+    <div class="grid">
+      <img src="/assets/headshot1.jpg" alt="">
+      <img src="/assets/headshot2.jpg" alt="">
+      <img src="/assets/headshot3.jpg" alt="">
+    </div>
+  </section>
+
+  <section class="section" id="representation">
+    <h2>Representation</h2>
+    <ul class="list">
+      <li><strong>🇵🇱 Poland</strong> — St-Gama</li>
+      <li><strong>🇬🇧 UK</strong> — Stevenson Withers</li>
+      <li><strong>🇺🇸 USA</strong> — Agency Name</li>
+      <li><strong>🇫🇷 France</strong> — Agence Martine Lapertot</li>
+    </ul>
+  </section>
+
+  <section class="section" id="contact">
+    <h2>Contact</h2>
+    <p>
+      Email:
+      <a href="mailto:contact@philippetlokinski.com">
+        contact@philippetlokinski.com
+      </a>
+    </p>
+  </section>
 
 </body>
 </html>
