Enhance actor profile with magician role and media
Updated actor section to include magician role and biography. Added showreel video and reorganized representation and media sections.

--- a/index.html
+++ b/index.html
@@ -28,43 +28,69 @@
     </nav>
   </header>
 
-  <section class="hero actor-hero" id="actor">
-    <div class="hero-text">
-      <h1>Philippe Tłokiński</h1>
-      <p class="role">Actor</p>
+  <section class="hero actor-hero">
+  <div class="hero-text">
+    <h1>Philippe Tłokiński</h1>
+    <p class="role">Actor · Magician</p>
+    <div class="hero-buttons">
+      <a href="/actor/" class="btn btn-dark">Actor</a>
+      <a href="/magician/" class="btn btn-light">Magician</a>
     </div>
+  </div>
+</section>
+
+  <section class="section" id="biography">
+    <h2>Actor</h2>
+    <p>
+      Philippe Tłokiński is an actor working in film, television and theatre.
+      His work spans international productions. Of Polish descent, Philippe was born in France and grew up in Switzerland.
+        After graduating from the National School of Dramatic Art of Saint-Étienne (France),
+        he worked with Ludovic Lagarde, Séverine Chavrier, Yves-Noël Genod,
+        Hervé Loichemol, Joan Mompart and Ivan Vyrypaev.
+    </p>
   </section>
 
-  <section class="section" id="showreel">
-    <h2>Showreel</h2>
-    <div class="video-wrapper">
-      <iframe
-        src="https://www.youtube.com/embed/YOUR_VIDEO_ID"
-        title="Philippe Tłokiński Showreel"
-        allowfullscreen>
-      </iframe>
-    </div>
-  </section>
+  <section class="section showreel" id="showreel">
+  <h2>Showreel</h2>
+  <div class="video-wrapper">
+    <iframe
+      src="https://www.youtube.com/embed/XVaE7ndLrhM"
+      title="Demo (Showreel) - Philippe Tłokiński"
+      frameborder="0"
+    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+    allowfullscreen>
+  </iframe>
+</div>
+</section>
 
-  <section class="section" id="gallery">
-    <h2>Gallery</h2>
+<section class="section" id="media">
+  <h2>Gallery</h2>
+
+  <div class="media-group">
+    <h3>Headshots</h3>
     <div class="grid">
-      <img src="/assets/headshot1.jpg" alt="">
-      <img src="/assets/headshot2.jpg" alt="">
-      <img src="/assets/headshot3.jpg" alt="">
+      <img src="/assets/headshot1.jpg" alt="Headshot Philippe Tłokiński">
+      <img src="/assets/headshot2.jpg" alt="Headshot Philippe Tłokiński">
+      <img src="/assets/headshot3.jpg" alt="Headshot Philippe Tłokiński">
     </div>
-  </section>
-
-  <section class="section" id="representation">
-    <h2>Representation</h2>
-    <ul class="list">
-      <li><strong>🇵🇱 Poland</strong> — St-Gama</li>
-      <li><strong>🇬🇧 UK</strong> — Stevenson Withers</li>
-      <li><strong>🇺🇸 USA</strong> — Agency Name</li>
-      <li><strong>🇫🇷 France</strong> — Agence Martine Lapertot</li>
-    </ul>
-  </section>
-
+  </div>
+</section>
+  
+<section class="section" id="news">
+  <h2>News</h2>
+  <p>Currently appearing in Ferdydurke at Och-Teatr in Warsaw. Updates coming soon.</p>
+</section>
+  
+<section class="section representation" id="representation">
+  <h2>Representation</h2>
+  <ul class="list">
+    <li><strong>🇵🇱 Poland</strong> — St-Gama</li>
+    <li><strong>🇬🇧 UK</strong> — Stevenson Withers</li>
+    <li><strong>🇺🇸 USA</strong> — Agency Name</li>
+    <li><strong>🇫🇷 France</strong> — Agence Martine Lapertot</li>
+  </ul>
+</section>
+  
   <section class="section" id="contact">
     <h2>Contact</h2>
     <p>
@@ -74,6 +100,8 @@
       </a>
     </p>
   </section>
+
+</div>
 
 </body>
 </html>
