--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </div>
 
     <nav class="topbar-nav">
-      <a href="#actor">Actor</a>
+      <a href="#biography">Actor</a>
       <a href="#showreel">Showreel</a>
       <a href="#gallery">Gallery</a>
       <a href="#news">News</a>
