--- a/index.html
+++ b/index.html
@@ -1,107 +1,113 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
+  <meta charset="UTF-8">
   <title>Philippe Tłokiński — Actor</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="/assets/style.css" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="/assets/style.css">
 </head>
+
 <body class="page page--actor">
 
-  <header class="topbar">
-    <div class="topbar-left">
-      <a href="https://twitter.com/" target="_blank">Twitter</a>
-      <a href="https://instagram.com/" target="_blank">Instagram</a>
-      <a href="https://facebook.com/" target="_blank">Facebook</a>
-      <a href="https://imdb.com/" target="_blank">IMDb</a>
-      <a href="https://linkedin.com/" target="_blank">LinkedIn</a>
+<header class="topbar">
+  <div class="topbar-left">
+    <a href="#">Twitter</a>
+    <a href="#">Instagram</a>
+    <a href="#">Facebook</a>
+    <a href="#">IMDb</a>
+    <a href="#">LinkedIn</a>
+  </div>
+
+  <nav class="topbar-nav">
+    <a href="#biography">Actor</a>
+    <a href="#showreel">Showreel</a>
+    <a href="#gallery">Gallery</a>
+    <a href="#news">News</a>
+    <a href="#representation">Representation</a>
+    <a href="#contact">Contact</a>
+    <a href="/magician/" class="switch">Magician</a>
+  </nav>
+</header>
+
+<section class="hero actor-hero">
+  <div class="hero-inner">
+    <h1>Philippe Tłokiński</h1>
+    <p class="role">Actor · Magician</p>
+
+    <div class="hero-buttons">
+      <a href="#biography" class="btn btn-outline-light">Actor</a>
+      <a href="/magician/" class="btn btn-outline-accent">Magician</a>
     </div>
+  </div>
+</section>
 
-    <nav class="topbar-nav">
-      <a href="#biography">Actor</a>
-      <a href="#showreel">Showreel</a>
-      <a href="#gallery">Gallery</a>
-      <a href="#news">News</a>
-      <a href="#representation">Representation</a>
-      <a href="#contact">Contact</a>
-      <a href="/magician/" class="switch">Magician</a>
-    </nav>
-  </header>
+<section class="section" id="biography">
+  <h2>Biography</h2>
 
-  <section class="hero actor-hero">
-    <div class="hero-text">
-      <h1>Philippe Tłokiński</h1>
-      <p class="role">Actor · Magician</p>
-      <div class="hero-buttons">
-        <a href="#biography" class="btn btn-dark">Actor</a>
-        <a href="/magician/" class="btn btn-light">Magician</a>
+  <div class="bio-wrapper">
+    <div class="bio-text">
+      <p>
+        Philippe Tłokiński is an actor working in film, television and theatre.
+        Born in France of Polish descent and raised in Switzerland,
+        he graduated from the National School of Dramatic Art of Saint-Étienne.
+      </p>
+
+      <p>
+        He has collaborated with Ludovic Lagarde, Séverine Chavrier,
+        Yves-Noël Genod, Hervé Loichemol, Joan Mompart and Ivan Vyrypaev.
+      </p>
+
+      <div class="cv-buttons">
+        <a href="#">View Screen CV</a>
+        <a href="#">View Stage CV</a>
       </div>
     </div>
-  </section>
 
-  <section class="section" id="biography">
-    <h2>Actor</h2>
-    <p>
-      Philippe Tłokiński is an actor working in film, television and theatre.
-      His work spans international productions. Of Polish descent, Philippe was born in France and grew up in Switzerland.
-      After graduating from the National School of Dramatic Art of Saint-Étienne (France),
-      he worked with Ludovic Lagarde, Séverine Chavrier, Yves-Noël Genod,
-      Hervé Loichemol, Joan Mompart and Ivan Vyrypaev.
-    </p>
-  </section>
-
-  <section class="section showreel" id="showreel">
-    <h2>Showreel</h2>
-    <div class="video-wrapper">
-      <iframe
-        src="https://www.youtube.com/embed/XVaE7ndLrhM"
-        title="Demo (Showreel) - Philippe Tłokiński"
-        frameborder="0"
-        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-        allowfullscreen>
-      </iframe>
+    <div class="bio-image">
+      <img src="/assets/images/headshot.jpg" alt="Philippe Tłokiński headshot">
     </div>
-  </section>
+  </div>
+</section>
 
-  <section class="section" id="gallery">
-    <h2>Gallery</h2>
+<section class="section" id="showreel">
+  <h2>Showreel</h2>
+  <div class="video-wrapper">
+    <iframe
+      src="https://www.youtube.com/embed/XVaE7ndLrhM"
+      title="Showreel Philippe Tłokiński"
+      allowfullscreen>
+    </iframe>
+  </div>
+</section>
 
-    <div class="media-group">
-      <h3>Headshots</h3>
-      <div class="grid">
-        <img src="/assets/headshot1.jpg" alt="Headshot Philippe Tłokiński">
-        <img src="/assets/headshot2.jpg" alt="Headshot Philippe Tłokiński">
-        <img src="/assets/headshot3.jpg" alt="Headshot Philippe Tłokiński">
-      </div>
-    </div>
-  </section>
-  
-  <section class="section" id="news">
-    <h2>News</h2>
-    <p>
-      Currently appearing in <em>Ferdydurke</em> at Och-Teatr in Warsaw. Updates coming soon.
-    </p>
-  </section>
-  
-  <section class="section representation" id="representation">
-    <h2>Representation</h2>
-    <ul class="list">
-      <li><strong>🇵🇱 Poland</strong> — St-Gama</li>
-      <li><strong>🇬🇧 UK</strong> — Stevenson Withers</li>
-      <li><strong>🇺🇸 USA</strong> — Agency Name</li>
-      <li><strong>🇫🇷 France</strong> — Agence Martine Lapertot</li>
-    </ul>
-  </section>
-  
-  <section class="section" id="contact">
-    <h2>Contact</h2>
-    <p>
-      Email:
-      <a href="mailto:contact@philippetlokinski.com">
-        contact@philippetlokinski.com
-      </a>
-    </p>
-  </section>
+<section class="section" id="gallery">
+  <h2>Gallery</h2>
+  <div class="grid">
+    <img src="/assets/images/gallery1.jpg" alt="">
+    <img src="/assets/images/gallery2.jpg" alt="">
+    <img src="/assets/images/gallery3.jpg" alt="">
+  </div>
+</section>
+
+<section class="section" id="news">
+  <h2>News</h2>
+  <p>Currently appearing in *Ferdydurke* at Och-Teatr in Warsaw.</p>
+</section>
+
+<section class="section" id="representation">
+  <h2>Representation</h2>
+  <ul class="representation-list">
+    <li>🇵🇱 Poland — St-Gama</li>
+    <li>🇬🇧 UK — Stevenson Withers</li>
+    <li>🇺🇸 USA — Agency Name</li>
+    <li>🇫🇷 France — Agence Martine Lapertot</li>
+  </ul>
+</section>
+
+<section class="section" id="contact">
+  <h2>Contact</h2>
+  <p>Email: <a href="mailto:contact@philippetlokinski.com">contact@philippetlokinski.com</a></p>
+</section>
 
 </body>
 </html>
