--- a/magician/index.html
+++ b/magician/index.html
@@ -1,63 +1,121 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pl">
 <head>
   <meta charset="UTF-8" />
-  <title>Philippe Tłokiński — Magician</title>
+  <title>Philippe Tłokiński — Actor & Magician</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="/assets/style.css" />
 </head>
-<body>
 
-<div class="page page--magician">
+<body class="page page--magician">
 
-  <header class="topbar light">
-    <a href="/" class="logo"></a>
-    <nav>
-      <a href="#contact">Contact</a>
-      <a href="/actor/">Actor</a>
-    </nav>
-  </header>
+<header class="topbar">
 
-  <section class="hero light-hero">
-    <div class="hero-text">
-      <h1>Magician</h1>
-      <p>
-        Philippe na co dzień jest aktorem. Być może widzieli go Państwo w filmach,
-        serialach lub na deskach teatru. Tak się składa, że jest także iluzjonistą.
-        <br><br>
-        Występuje dla dzieci i rodzin, jak również na wydarzenia biznesowe,
-        kulturalne oraz eventy specjalne.
-      </p>
+  <div class="topbar-left">
+    <a href="#">Twitter</a>
+    <a href="#">Instagram</a>
+    <a href="#">Facebook</a>
+    <a href="#">IMDb</a>
+    <a href="#">LinkedIn</a>
+  </div>
+
+  <nav class="topbar-nav">
+    <a href="#story">Magician</a>
+    <a href="#video">Video</a>
+    <a href="#performance">Performance</a>
+    <a href="#contact">Contact</a>
+    <a href="/">Actor</a>
+  </nav>
+
+</header>
+
+<!-- HERO -->
+
+<section class="hero magician-hero">
+
+  <div class="hero-inner">
+    <h1>Philippe Tłokiński</h1>
+    <p class="role">Magician · Actor</p>
+
+    <div class="hero-buttons">
+      <a href="#story" class="btn btn-outline-dark">Magician</a>
+      <a href="/" class="btn btn-outline-accent">Actor</a>
     </div>
-  </section>
+  </div>
 
-  <section class="section">
-    <h2>Performance</h2>
-    <p>
-      Zamawiając „Red Jacket Show”, Philippe zakłada swoją czerwoną marynarkę
-      i niczym superbohater dba o dobrą zabawę podczas urodzin, komunii
-      oraz wydarzeń rodzinnych.
-      <br><br>
-      Najczęściej jest to 40-minutowy pokaz iluzji przeznaczony dla widzów
-      w różnym wieku — zarówno dla dzieci, jak i dorosłych.
-      Każdy występ jest szyty na miarę.
-    </p>
-  </section>
+</section>
 
-  <section class="section" id="contact">
-    <h2>Contact</h2>
-    <p>
-      For bookings and collaborations:
-    </p>
-    <p>
-      <strong>Email:</strong>
-      <a href="mailto:contact@philippetlokinski.com">
-        contact@philippetlokinski.com
-      </a>
-    </p>
-  </section>
+<!-- STORY / BIO -->
 
-</div>
+<section class="section" id="story">
+
+  <h2>Magician</h2>
+
+  <p>
+    Philippe na co dzień jest aktorem. Być może widzieli go Państwo w filmach,
+    serialach lub na deskach teatru. Tak się składa, że jest także iluzjonistą.
+  </p>
+
+  <p>
+    W swoich pokazach łączy teatr, narrację i klasyczną iluzję,
+    tworząc doświadczenie skierowane zarówno do dzieci,
+    jak i dorosłych widzów.
+  </p>
+
+</section>
+
+<!-- VIDEO -->
+
+<section class="section" id="video">
+
+  <h2>Video</h2>
+
+  <div class="video-wrapper">
+    <iframe
+      src="https://www.youtube.com/embed/XVaE7ndLrhM"
+      title="Magic Performance Philippe Tłokiński"
+      allowfullscreen>
+    </iframe>
+  </div>
+
+</section>
+
+<!-- PERFORMANCE -->
+
+<section class="section" id="performance">
+
+  <h2>Performance</h2>
+
+  <p>
+    Zamawiając „Red Jacket Show”, Philippe zakłada swoją czerwoną marynarkę
+    i niczym superbohater dba o dobrą zabawę podczas urodzin, komunii
+    oraz wydarzeń rodzinnych.
+  </p>
+
+  <p>
+    Najczęściej jest to 40-minutowy pokaz iluzji przeznaczony dla widzów
+    w różnym wieku — zarówno dla dzieci, jak i dorosłych.
+    Każdy występ jest szyty na miarę.
+  </p>
+
+</section>
+
+<!-- CONTACT -->
+
+<section class="section" id="contact">
+
+  <h2>Contact</h2>
+
+  <p>Rezerwacje i współpraca:</p>
+
+  <p>
+    <strong>Email:</strong>
+    <a href="mailto:contact@philippetlokinski.com">
+      contact@philippetlokinski.com
+    </a>
+  </p>
+
+</section>
 
 </body>
 </html>
