--- a/magician/index.html
+++ b/magician/index.html
@@ -38,8 +38,8 @@
     <p class="role">Magician · Actor</p>
 
     <div class="hero-buttons">
-      <a href="#story" class="btn btn-outline-dark">Magician</a>
-      <a href="/" class="btn btn-outline-accent">Actor</a>
+      <a href="#story" class="btn btn-outline-dark">Actor</a>
+      <a href="/" class="btn btn-outline-accent">Magician</a>
     </div>
   </div>
 
