--- a/magician/index.html
+++ b/magician/index.html
@@ -38,7 +38,7 @@
     <p class="role">Magician · Actor</p>
 
     <div class="hero-buttons">
-      <a href="#/" class="btn btn-outline-dark">Actor</a>
+      <a href="/" class="btn btn-outline-dark">Actor</a>
       <a href="/magician/" class="btn btn-outline-accent">Magician</a>
     </div>
   </div>
