--- a/magician/index.html
+++ b/magician/index.html
@@ -39,7 +39,7 @@
 
     <div class="hero-buttons">
       <a href="/" class="btn btn-outline-dark">Actor</a>
-      <a href="/magician/" class="btn btn-outline-accent">Magician</a>
+      <a href="#story" class="btn btn-outline-accent">Magician</a>
     </div>
   </div>
 
