--- a/magician/index.html
+++ b/magician/index.html
@@ -72,7 +72,7 @@
 
   <div class="video-wrapper">
     <iframe
-      src="https://www.youtube.com/embed/XVaE7ndLrhM"
+      src="https://www.youtube.com/embed/TwojKOD"
       title="Magic Performance Philippe Tłokiński"
       allowfullscreen>
     </iframe>
@@ -87,15 +87,14 @@
   <h2>Performance</h2>
 
   <p>
-    Zamawiając „Red Jacket Show”, Philippe zakłada swoją czerwoną marynarkę
-    i niczym superbohater dba o dobrą zabawę podczas urodzin, komunii
+    Chcecie zamowic tak zwany „Red Jacket Show”, Philippe zalozy swoją czerwoną marynarkę
+    i niczym superbohater zadba o dobrą zabawę podczas urodzin, komunii
     oraz wydarzeń rodzinnych.
   </p>
 
   <p>
     Najczęściej jest to 40-minutowy pokaz iluzji przeznaczony dla widzów
     w różnym wieku — zarówno dla dzieci, jak i dorosłych.
-    Każdy występ jest szyty na miarę.
   </p>
 
 </section>
