--- a/index.html
+++ b/index.html
@@ -42,7 +42,8 @@
 </section>
 
 <section class="section" id="biography">
-  <h2>Biography</h2>
+  <div class="biography-inner">
+    <h2>Biography</h2>
 
   <div class="bio-wrapper">
     <div class="bio-text">
@@ -90,12 +91,14 @@
 </section>
 
 <section class="section" id="news">
-  <h2>News</h2>
+  <div class="news-inner">
+    <h2>News</h2>
   <p>Currently appearing in *Ferdydurke* at Och-Teatr in Warsaw.</p>
 </section>
 
 <section class="section" id="representation">
-  <h2>Representation</h2>
+  <div class="representation-inner">
+    <h2>Representation</h2>
   <ul class="representation-list">
     <li>🇵🇱 Poland — St-Gama</li>
     <li>🇬🇧 UK — Stevenson Withers</li>
